[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/game/base_maps/BaseMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/game/base_maps/FugitiveMap.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 125, 10, 155 )

[node name="Game" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

[node name="Players" type="Spatial" parent="." index="1"]

[node name="Lights" type="Spatial" parent="." index="2"]

[node name="WinArea" type="Area" parent="." index="3" groups=[
"win_zone",
]]
collision_layer = 0

[node name="HiderSpawns" type="Spatial" parent="." index="4"]

[node name="SeekerSpawns" type="Spatial" parent="." index="5"]

[node name="Roads" type="Area" parent="." index="6"]

[node name="MapBoundingBox" type="CollisionShape" parent="Roads" index="0"]
shape = SubResource( 1 )

[node name="GameTimer" type="Timer" parent="." index="7" groups=[
"game_timer",
]]
wait_time = 600.0
one_shot = true

[node name="StartTimer" type="Timer" parent="." index="8" groups=[
"start_timer",
]]
wait_time = 5.0
one_shot = true

[node name="HeadstartTimer" type="Timer" parent="." index="9" groups=[
"headstart_timer",
]]
wait_time = 15.0
one_shot = true
